--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
 }
 h2{
     font-size: 50px;
+    text-align:center;
 }
 
 /* Global styles */
@@ -299,6 +300,77 @@ section {
     border-radius: 50%;
 }
 
+  .speakers{
+    font-family: 'Arial', sans-serif;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    
+  }
+
+  .keynote-card {
+    
+    background: #161b22;
+    border-radius: 15px;
+    box-shadow: 0 0 30px red;
+    padding: 20px;
+    width: 300px;
+    text-align: center;
+    position: relative;
+    transition: all 0.3s ease;
+}
+  .keynote-card:hover{
+    box-shadow: 0 0 75px greenyellow;
+}
+
+.keynote-card::before {
+    content: '';
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    right: -2px;
+    bottom: -2px;
+    box-shadow: 0 0 100px linear-gradient(90deg, #e91e63, #2196f3);
+    z-index: -1;
+    border-radius: 10px;
+}
+  .image-container {
+    margin: 0 auto;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    overflow: hidden;
+    border: 3px solid red;
+  }
+  
+  .speaker-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .speaker-name {
+    font-size: 1.5em;
+    margin-top: 15px;
+    margin-bottom: 5px;
+    color: #fff;
+  }
+  
+  .speaker-title {
+    font-size: 1.2em;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: red;
+  }
+  
+  .speaker-bio {
+    font-size: 0.9em;
+    color: #aaa;
+    line-height: 1.5;
+  }
+  
 section{
     padding:50px;
 }
